# poirot

./: Cargo.toml  README.md
examples/: Cargo.toml  test.rs
poirot/: Cargo.toml
poirot/src/raster/: canvas.rs  lattice.rs  mod.rs
